<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:background="@drawable/border"
    tools:context=".DetailNotificationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_template"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textTitreNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accident_voiture"
            android:textSize="30dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:text="@string/x"
            android:textColor="@color/black"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gravite_template"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/title_template">

        <TextView
            android:id="@+id/textGravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity"
            android:textSize="25dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/radioButtonGroupeGravity"/>

        <RadioGroup
            android:id="@+id/radioButtonGroupeGravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textGravity">

            <RadioButton
                android:id="@+id/radioButtonFaible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faible"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/radioButtonGroupeGravity"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioButtonModeree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/moderee"
                android:textSize="18dp"
                app:layout_constraintStart_toEndOf="@+id/radioButtonFaible"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioButtonElevee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/elevee"
                android:textSize="18dp"
                app:layout_constraintStart_toEndOf="@+id/radioButtonModeree"
                app:layout_constraintTop_toTopOf="parent" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/gravite_template">

        <TextView
            android:id="@+id/textType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <RadioGroup
            android:id="@+id/radioButtonGroupeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/textType"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <RadioButton
                android:id="@+id/radioButtonVoiture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voiture"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="@+id/radioButtonGroupeType"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioButtonMoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moto"
                android:textSize="12dp"
                app:layout_constraintStart_toEndOf="@+id/radioButtonVoiture"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioButtonCamion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camion"
                android:textSize="12dp"
                app:layout_constraintStart_toEndOf="@+id/radioButtonMoto"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioButtonVelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/velo"
                android:textSize="12dp"
                app:layout_constraintStart_toEndOf="@+id/radioButtonCamion"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioButtonPieton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pieton"
                android:textSize="12dp"
                app:layout_constraintStart_toEndOf="@+id/radioButtonVelo"
                app:layout_constraintTop_toTopOf="parent" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="260dp"
        android:text="@string/image"
        android:textSize="25dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.MockView
        android:id="@+id/mockViewImage"
        android:layout_width="235dp"
        android:layout_height="165dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="260dp"
        app:layout_constraintStart_toEndOf="@+id/textImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="448dp"
        android:text="@string/description"
        android:textSize="25dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDescriptionLorem"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loremIpsum"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>