<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:paddingBottom="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accident_de_voiture"
        android:textColor="@color/black"
        android:textSize="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:text="X"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gravite_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/title_template"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity"
            android:textSize="25dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/radio_button_gravite_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView2">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButtonGravity1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faible"
                    android:textSize="18dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>

                <RadioButton
                    android:id="@+id/radioButtonGravity2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderee"
                    android:textSize="18dp"
                    android:layout_marginLeft="10dp"/>

                <RadioButton
                    android:id="@+id/radioButtonGravity3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elevee"
                    android:textSize="18dp"
                    android:layout_marginLeft="10dp"/>

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/type_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/title_template"
        app:layout_constraintStart_toEndOf="@id/gravite_template"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="25dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/radio_button_type_template"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/radio_button_type_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/textView3"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonType1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voiture"
                    android:textSize="18dp"
                    android:layout_marginLeft="20dp"/>

                <RadioButton
                    android:id="@+id/radioButtonType2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moto"
                    android:textSize="18dp"
                    android:layout_marginLeft="5dp"/>

                <RadioButton
                    android:id="@+id/radioButtonType3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camion"
                    android:textSize="18dp"
                    android:layout_marginLeft="5dp"/>

                <RadioButton
                    android:id="@+id/radioButtonType4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/velo"
                    android:textSize="18dp"
                    android:layout_marginLeft="5dp"/>

                <RadioButton
                    android:id="@+id/radioButtonType5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pieton"
                    android:textSize="18dp"
                    android:layout_marginLeft="5dp"/>

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/type_template"
        app:layout_constraintStart_toEndOf="@id/gravite_template"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textSize="25dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.utils.widget.MockView
            android:id="@+id/mockViewImage"
            android:background="@drawable/thinborder"
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toEndOf="@+id/textImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/description_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/gravite_template"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/description"
            android:textSize="25dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textDescriptionLorem"
            android:background="@drawable/thinborder"
            android:padding="5dp"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/loremIpsum"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/textDescription"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>