<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailNotificationFragment">

    <TextView
        android:id="@+id/textTitreSignalerAccident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="74dp"
        android:textColor="@color/black"
        android:text="@string/signalerAccident"
        app:layout_constraintEnd_toStartOf="@+id/buttonExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/x"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/textTitreSignalerAccident"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textGravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="41dp"
        android:textColor="@color/black"
        android:text="@string/gravity"

        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <RadioGroup
        android:id="@+id/radioButtonGroupeGravity"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonFaible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/faible"
            app:layout_constraintStart_toStartOf="@+id/radioButtonGroupeGravity"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButtonModeree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/moderee"
            app:layout_constraintStart_toEndOf="@+id/radioButtonFaible"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButtonElevee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/elevee"
            app:layout_constraintStart_toEndOf="@+id/radioButtonModeree"
            app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>

    <TextView
        android:id="@+id/textType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="41dp"
        android:text="@string/type"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioButtonGroupeGravity" />

    <RadioGroup
        android:id="@+id/radioButtonGroupeType"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textType"
        app:layout_constraintTop_toBottomOf="@id/radioButtonGroupeGravity">

        <RadioButton
            android:id="@+id/radioButtonVoiture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/voiture"
            app:layout_constraintStart_toStartOf="@+id/radioButtonGroupeType"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButtonMoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/moto"
            app:layout_constraintStart_toEndOf="@+id/radioButtonVoiture"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButtonCamion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/camion"
            app:layout_constraintStart_toEndOf="@+id/radioButtonMoto"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButtonVelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/velo"
            app:layout_constraintStart_toEndOf="@+id/radioButtonCamion"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButtonPieton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pieton"
            app:layout_constraintStart_toEndOf="@+id/radioButtonVelo"
            app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="Titre:"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitreSignalerAccident" />

    <TextView
        android:id="@+id/textTitre"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="Accident de voiture"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/titre"
        app:layout_constraintTop_toBottomOf="@id/textTitreSignalerAccident"
        android:background="@drawable/border"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="Descrition:"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titre" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="Une voiture sur le bors de la route"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/titre"
        app:layout_constraintStart_toEndOf="@+id/description"
        android:background="@drawable/border"
        />

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/annulerSignalement"
      android:text="Annuler"
      android:layout_marginLeft="50dp"
      app:layout_constraintTop_toBottomOf="@id/radioButtonGroupeType"
      app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/validateSignalement"
        android:text="Valider"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/radioButtonGroupeType"
        app:layout_constraintLeft_toRightOf="@id/annulerSignalement"/>

</androidx.constraintlayout.widget.ConstraintLayout>
